# ckan

./: #test.ini#  .bowerrc  .circleci-matrix.yml  .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .env.development  .flake8  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .hgignore  .pipignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .readthedocs.yml  .snyk  .style.yapf  .test_durations  .travis.yml  CHANGELOG.rst  CHANGELOG.txt  CODEX_CI_FIX_NOTE.md  CODE_OF_CONDUCT.md  CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Coding_Standards.rst  DEBUG_CIOOS_CKAN.md  Dockerfile  Dockerfile-alpine  Dockerfile.dev  Dockerfile.py3  FEATURES.md  FLASK_MIGRATION_GUIDE.md  (+78 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  README_codespaces.md  devcontainer.json  docker-compose.yml  setup.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.tx/: config
.vagrant-scripts/: setup-ckan.sh  setup-server.sh
Abortion pills in Ajman/: SHARJAH+27737758557^)))) Misoprostol & Abortion pills for sale in Dubai, Abu Dhabi, (Uae) Ajman, Sharjah, Al ain, Al barsha
Vagrant/: Vagrantfile
changes/: 0001.canada.bugfix  0002.canada.changes  0003.canada.changes  0004.canada.changes  172.canada.bugfix  (+730 more)
ckanext/ckanext-datalist/: MANIFEST.in  README.md  setup.cfg  setup.py
ckanext/ckanext-datalist/.github/workflows/: test.yml
ckanext/ckanext-datalist/ckanext/datalist/: plugin.py  views.py
ckanext/ckanext-datalist/ckanext/datalist/assets/: script.js  webassets.yml
ckanext/ckanext-datalist/ckanext/datalist/logic/: actions.py  auth.py  extended_resource_table.py  extended_user_table.py  schemas.py  validators.py
ckanext/ckanext-datalist/ckanext/datalist/model/: extended_resource_table.py  extended_user_table.py
ckanext/ckanext-datalist/ckanext/datalist/templates/user/: dashboard.html  dashboard_statistical.html
ckanext/ckanext-datalist/ckanext/datalist/tests/: test_plugin.py
ckanext/ckanext-statistical_org/: MANIFEST.in  README.md  setup.cfg  setup.py
ckanext/ckanext-statistical_org/.github/workflows/: test.yml
ckanext/ckanext-statistical_org/ckanext/statistical_org/: cli.py  helpers.py  plugin.py  views.py
ckanext/ckanext-statistical_org/ckanext/statistical_org/assets/: script.js  webassets.yml
ckanext/ckanext-statistical_org/ckanext/statistical_org/logic/: action.py  auth.py  schema.py  statistical_org.py  validators.py
ckanext/ckanext-statistical_org/ckanext/statistical_org/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/ckanext-statistical_org/ckanext/statistical_org/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext/ckanext-task1/: MANIFEST.in  README.md  setup.cfg  setup.py
ckanext/ckanext-task1/.github/workflows/: test.yml
ckanext/ckanext-task1/ckanext/task1/: plugin.py
ckanext/ckanext-task1/ckanext/task1/assets/: script.js  webassets.yml
ckanext/ckanext-task1/ckanext/task1/logic/: action_result.py  actions.py  auth.py  extended_tracking_summary.py  schemas.py  test.py  validators.py
ckanext/ckanext-task1/ckanext/task1/tests/: test_plugin.py
ckanext/ckanext-task2/: MANIFEST.in  README.md  dev-requirements.txt  setup.cfg  setup.py
ckanext/ckanext-task2/.github/workflows/: test.yml
ckanext/ckanext-task2/ckanext/task2/: __init__.py  plugin.py
ckanext/ckanext-task2/ckanext/task2/assets/: script.js  webassets.yml
ckanext/ckanext-task2/ckanext/task2/logic/: actions.py  auth.py  extended_tracking_raw.py  schemas.py  validators.py
ckanext/ckanext-task2/ckanext/task2/tests/: test_plugin.py
ckanext/ckanext-tracking-datatypes/: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
ckanext/ckanext-tracking-datatypes/.github/workflows/: test.yml
ckanext/ckanext-tracking-datatypes/ckanext/tracking_datatypes/: __init__.py  cli.py  helpers.py  plugin.py  views.py
ckanext/ckanext-tracking-datatypes/ckanext/tracking_datatypes/assets/: script.js  webassets.yml
ckanext/ckanext-tracking-datatypes/ckanext/tracking_datatypes/logic/: action.py  auth.py  schema.py  tracking_types_resource.py  validators.py
ckanext/ckanext-tracking-datatypes/ckanext/tracking_datatypes/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/ckanext-tracking-datatypes/ckanext/tracking_datatypes/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext/ckanext-user_login/: MANIFEST.in  README.md  setup.cfg  setup.py
ckanext/ckanext-user_login/.github/workflows/: test.yml
ckanext/ckanext-user_login/ckanext/user_login/: plugin.py
ckanext/ckanext-user_login/ckanext/user_login/assets/: script.js  webassets.yml
ckanext/ckanext-user_login/ckanext/user_login/logic/: actions.py  auth.py  schemas.py
ckanext/ckanext-user_login/ckanext/user_login/model/: extendedActivityTable.py
ckanext/ckanext-user_login/ckanext/user_login/tests/: test_plugin.py
contrib/cookiecutter/ckan_extension/{{cookiecutter.project}}/: .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  test.ini
contrib/cookiecutter/ckan_extension/{{cookiecutter.project}}/.github/workflows/: test.yml
contrib/cookiecutter/ckan_extension/{{cookiecutter.project}}/ckanext/: __init__.py
contrib/cookiecutter/ckan_extension/{{cookiecutter.project}}/ckanext/{{cookiecutter.project_shortname}}/: cli.py  helpers.py  plugin.py  validators.py  views.py
contrib/cookiecutter/ckan_extension/{{cookiecutter.project}}/ckanext/{{cookiecutter.project_shortname}}/assets/: script.js  style.css  webassets.yml
contrib/cookiecutter/ckan_extension/{{cookiecutter.project}}/ckanext/{{cookiecutter.project_shortname}}/logic/: action.py  auth.py  schema.py  validators.py
contrib/cookiecutter/ckan_extension/{{cookiecutter.project}}/ckanext/{{cookiecutter.project_shortname}}/tests/: test_helpers.py  test_plugin.py  test_validators.py  test_views.py
contrib/cookiecutter/ckan_extension/{{cookiecutter.project}}/ckanext/{{cookiecutter.project_shortname}}/tests/logic/: auth.py  test_action.py  test_auth.py  test_validators.py
(+5513 files in other folders)
