[metadata]
name = ckan
version = attr: ckan.__version__
description = CKAN Software
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://ckan.org/
author = https://github.com/ckan/ckan/graphs/contributors
author_email = info@ckan.org
license = AGPL
keywords =
         data
         packaging
         component
         tool
         server
classifiers =
            Development Status :: 5 - Production/Stable
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
            Programming Language :: Python :: 3.11

[options]
python_requires = >= 3.7
install_requires =
                 setuptools >= 44.1.0
packages = find:
namespace_packages = ckanext
include_package_data = True
zip_safe = False

[options.packages.find]
include = ckan, ckanext

[options.extras_require]


[options.entry_points]
console_scripts =
    ckan = ckan.cli.cli:ckan

ckan.click_command =
    datastore = ckanext.datastore.cli:datastore
    datapusher = ckanext.datapusher.cli:datapusher

ckan.plugins =
    activity = ckanext.activity.plugin:ActivityPlugin
    stats = ckanext.stats.plugin:StatsPlugin
    multilingual_dataset = ckanext.multilingual.plugin:MultilingualDataset
    multilingual_group = ckanext.multilingual.plugin:MultilingualGroup
    multilingual_tag = ckanext.multilingual.plugin:MultilingualTag
    multilingual_resource = ckanext.multilingual.plugin:MultilingualResource
    expire_api_token = ckanext.expire_api_token.plugin:ExpireApiTokenPlugin
    chained_functions = ckanext.chained_functions.plugin:ChainedFunctionsPlugin
    datastore = ckanext.datastore.plugin:DatastorePlugin
    datapusher=ckanext.datapusher.plugin:DatapusherPlugin
    test_tag_vocab_plugin = ckanext.test_tag_vocab_plugin:MockVocabTagsPlugin
    resource_proxy = ckanext.resourceproxy.plugin:ResourceProxy
    text_view = ckanext.textview.plugin:TextView
    recline_view = ckanext.reclineview.plugin:ReclineView
    recline_grid_view = ckanext.reclineview.plugin:ReclineGridView
    recline_graph_view = ckanext.reclineview.plugin:ReclineGraphView
    recline_map_view = ckanext.reclineview.plugin:ReclineMapView
    datatables_view = ckanext.datatablesview.plugin:DataTablesView
    image_view = ckanext.imageview.plugin:ImageView
    audio_view = ckanext.audioview.plugin:AudioView
    video_view = ckanext.videoview.plugin:VideoView
    webpage_view = ckanext.webpageview.plugin:WebPageView
    recline_grid = ckanext.reclineview.plugin:ReclineGridView
    recline_graph = ckanext.reclineview.plugin:ReclineGraphView
    recline_map = ckanext.reclineview.plugin:ReclineMapView
    example_itemplatehelpers = ckanext.example_itemplatehelpers.plugin:ExampleITemplateHelpersPlugin
    example_idatasetform = ckanext.example_idatasetform.plugin:ExampleIDatasetFormPlugin
    example_idatasetform_inherit = ckanext.example_idatasetform.plugin:ExampleIDatasetFormInheritPlugin
    example_idatasetform_v1 = ckanext.example_idatasetform.plugin_v1:ExampleIDatasetFormPlugin
    example_idatasetform_v2 = ckanext.example_idatasetform.plugin_v2:ExampleIDatasetFormPlugin
    example_idatasetform_v3 = ckanext.example_idatasetform.plugin_v3:ExampleIDatasetFormPlugin
    example_idatasetform_v4 = ckanext.example_idatasetform.plugin_v4:ExampleIDatasetFormPlugin
    example_idatasetform_v5 = ckanext.example_idatasetform.plugin_v5:ExampleIDatasetFormPlugin
    example_idatasetform_v6 = ckanext.example_idatasetform.plugin_v6:ExampleIDatasetFormPlugin
    example_idatasetform_v7 = ckanext.example_idatasetform.plugin_v7:ExampleIDatasetFormPlugin
    example_igroupform = ckanext.example_igroupform.plugin:ExampleIGroupFormPlugin
    example_igroupform_v2 = ckanext.example_igroupform.plugin_v2:ExampleIGroupFormPlugin
    example_igroupform_default_group_type = ckanext.example_igroupform.plugin:ExampleIGroupFormPlugin_DefaultGroupType
    example_igroupform_organization = ckanext.example_igroupform.plugin:ExampleIGroupFormOrganizationPlugin
    example_iauthfunctions_v1 = ckanext.example_iauthfunctions.plugin_v1:ExampleIAuthFunctionsPlugin
    example_iauthfunctions_v2 = ckanext.example_iauthfunctions.plugin_v2:ExampleIAuthFunctionsPlugin
    example_iauthfunctions_v3 = ckanext.example_iauthfunctions.plugin_v3:ExampleIAuthFunctionsPlugin
    example_iauthfunctions_v4 = ckanext.example_iauthfunctions.plugin_v4:ExampleIAuthFunctionsPlugin
    example_iauthfunctions_v5_custom_config_setting = ckanext.example_iauthfunctions.plugin_v5_custom_config_setting:ExampleIAuthFunctionsPlugin
    example_iauthfunctions_v6_parent_auth_functions = ckanext.example_iauthfunctions.plugin_v6_parent_auth_functions:ExampleIAuthFunctionsPlugin
    example_theme_v01_empty_extension = ckanext.example_theme_docs.v01_empty_extension.plugin:ExampleThemePlugin
    example_theme_v02_empty_template = ckanext.example_theme_docs.v02_empty_template.plugin:ExampleThemePlugin
    example_theme_v03_jinja = ckanext.example_theme_docs.v03_jinja.plugin:ExampleThemePlugin
    example_theme_v04_ckan_extends = ckanext.example_theme_docs.v04_ckan_extends.plugin:ExampleThemePlugin
    example_theme_v05_block = ckanext.example_theme_docs.v05_block.plugin:ExampleThemePlugin
    example_theme_v06_super = ckanext.example_theme_docs.v06_super.plugin:ExampleThemePlugin
    example_theme_v07_helper_function = ckanext.example_theme_docs.v07_helper_function.plugin:ExampleThemePlugin
    example_theme_v08_custom_helper_function = ckanext.example_theme_docs.v08_custom_helper_function.plugin:ExampleThemePlugin
    example_theme_v09_snippet = ckanext.example_theme_docs.v09_snippet.plugin:ExampleThemePlugin
    example_theme_v10_custom_snippet = ckanext.example_theme_docs.v10_custom_snippet.plugin:ExampleThemePlugin
    example_theme_v11_HTML_and_CSS = ckanext.example_theme_docs.v11_HTML_and_CSS.plugin:ExampleThemePlugin
    example_theme_v12_extra_public_dir = ckanext.example_theme_docs.v12_extra_public_dir.plugin:ExampleThemePlugin
    example_theme_v13_custom_css = ckanext.example_theme_docs.v13_custom_css.plugin:ExampleThemePlugin
    example_theme_v14_more_custom_css = ckanext.example_theme_docs.v14_more_custom_css.plugin:ExampleThemePlugin
    example_theme_v15_webassets = ckanext.example_theme_docs.v15_webassets.plugin:ExampleThemePlugin
    example_theme_v16_initialize_a_javascript_module = ckanext.example_theme_docs.v16_initialize_a_javascript_module.plugin:ExampleThemePlugin
    example_theme_v17_popover = ckanext.example_theme_docs.v17_popover.plugin:ExampleThemePlugin
    example_theme_v18_snippet_api = ckanext.example_theme_docs.v18_snippet_api.plugin:ExampleThemePlugin
    example_theme_v19_01_error = ckanext.example_theme_docs.v19_01_error.plugin:ExampleThemePlugin
    example_theme_v19_02_error_handling = ckanext.example_theme_docs.v19_02_error_handling.plugin:ExampleThemePlugin
    example_theme_v20_pubsub = ckanext.example_theme_docs.v20_pubsub.plugin:ExampleThemePlugin
    example_theme_v21_custom_jquery_plugin = ckanext.example_theme_docs.v21_custom_jquery_plugin.plugin:ExampleThemePlugin
    example_theme_v22_webassets = ckanext.example_theme_docs.v22_webassets.plugin:ExampleThemePlugin
    example_theme_custom_config_setting = ckanext.example_theme_docs.custom_config_setting.plugin:ExampleThemePlugin
    example_theme_custom_emails = ckanext.example_theme_docs.custom_emails.plugin:ExampleCustomEmailsPlugin
    example_iresourcecontroller = ckanext.example_iresourcecontroller.plugin:ExampleIResourceControllerPlugin
    example_ivalidators = ckanext.example_ivalidators.plugin:ExampleIValidatorsPlugin
    example_iconfigurer = ckanext.example_iconfigurer.plugin:ExampleIConfigurerPlugin
    example_itranslation = ckanext.example_itranslation.plugin:ExampleITranslationPlugin
    example_iconfigurer_v1 = ckanext.example_iconfigurer.plugin_v1:ExampleIConfigurerPlugin
    example_iconfigurer_v2 = ckanext.example_iconfigurer.plugin_v2:ExampleIConfigurerPlugin
    example_flask_iblueprint = ckanext.example_flask_iblueprint.plugin:ExampleFlaskIBlueprintPlugin
    example_flask_streaming = ckanext.example_flask_streaming.plugin:ExampleFlaskStreamingPlugin
    example_iuploader = ckanext.example_iuploader.plugin:ExampleIUploader
    example_idatastorebackend = ckanext.example_idatastorebackend.plugin:ExampleIDatastoreBackendPlugin
    example_ipermissionlabels = ckanext.example_ipermissionlabels.plugin:ExampleIPermissionLabelsPlugin
    example_iapitoken = ckanext.example_iapitoken.plugin:ExampleIApiTokenPlugin
    example_iclick = ckanext.example_iclick.plugin:ExampleIClickPlugin
    example_blanket = ckanext.example_blanket_implementation.plugin:ExampleBlanketPlugin
    example_blanket_helper = ckanext.example_blanket_implementation.plugin:ExampleBlanketHelperPlugin
    example_blanket_auth = ckanext.example_blanket_implementation.plugin:ExampleBlanketAuthPlugin
    example_blanket_action = ckanext.example_blanket_implementation.plugin:ExampleBlanketActionPlugin
    example_blanket_blueprint = ckanext.example_blanket_implementation.plugin:ExampleBlanketBlueprintPlugin
    example_blanket_cli = ckanext.example_blanket_implementation.plugin:ExampleBlanketCliPlugin
    example_blanket_validator = ckanext.example_blanket_implementation.plugin:ExampleBlanketValidatorPlugin
    example_blanket_config_declaration = ckanext.example_blanket_implementation.plugin:ExampleBlanketConfigDeclarationPlugin
    example_isignal = ckanext.example_isignal.plugin:ExampleISignalPlugin
    example_iauthenticator = ckanext.example_iauthenticator.plugin:ExampleIAuthenticatorPlugin
    example_humanizer = ckanext.example_humanizer.plugin:ExampleHumanizerPlugin
    example_database_migrations = ckanext.example_database_migrations.plugin:ExampleDatabaseMigrationsPlugin

ckan.system_plugins =
    synchronous_search = ckan.lib.search:SynchronousSearchPlugin

ckan.test_plugins =
    session_plugin = tests.plugins.ckantestplugins:SessionPlugin
    authorizer_plugin = tests.plugins.ckantestplugins:AuthorizerPlugin
    test_observer_plugin = tests.plugins.ckantestplugins:PluginObserverPlugin
    action_plugin = tests.plugins.ckantestplugins:ActionPlugin
    auth_plugin = tests.plugins.ckantestplugins:AuthPlugin
    test_group_plugin = tests.plugins.ckantestplugins:MockGroupControllerPlugin
    test_package_controller_plugin = tests.plugins.ckantestplugins:MockPackageControllerPlugin
    test_resource_view = tests.plugins.ckantestplugins:MockResourceViewExtension
    sample_datastore_plugin = ckanext.datastore.tests.sample_datastore_plugin:SampleDataStorePlugin
    example_datastore_deleted_with_count_plugin = ckanext.datastore.tests.test_chained_action:ExampleDataStoreDeletedWithCountPlugin
    example_data_store_search_sql_plugin = ckanext.datastore.tests.test_chained_auth_functions:ExampleDataStoreSearchSQLPlugin
    example_external_provider_plugin = ckanext.datastore.tests.test_chained_auth_functions:ExampleExternalProviderPlugin
    test_datastore_view = ckan.tests.lib.test_datapreview:MockDatastoreBasedResourceView
    test_datapusher_plugin = ckanext.datapusher.tests.test_interfaces:FakeDataPusherPlugin
    test_blueprint_plugin = ckan.tests.config.test_middleware:BlueprintPlugin
    test_middleware_plugin = ckan.tests.config.test_middleware:MiddlewarePlugin
    test_flash_plugin = ckan.tests.config.test_sessions:FlashMessagePlugin
    test_helpers_plugin = ckan.tests.lib.test_helpers:HelpersTestPlugin
    test_feed_plugin = ckan.tests.controllers.test_feed:MockFeedPlugin
    test_js_translations_plugin = ckan.tests.lib.test_i18n:JSTranslationsTestPlugin
    mock_search_plugin = ckan.tests.logic.action.test_init:MockPackageSearchPlugin

babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[egg_info]
# tag_build = dev
# tag_svn_revision = true

[easy_install]
find_links = http://www.pylonshq.com/download/

# Babel configuration
[compile_catalog]
domain = ckan
directory = ckan/i18n
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = ckan/i18n/ckan.pot
width = 80

[init_catalog]
domain = ckan
input_file = ckan/i18n/ckan.pot
output_dir = ckan/i18n

[update_catalog]
domain = ckan
input_file = ckan/i18n/ckan.pot
output_dir = ckan/i18n
previous = true

[upload_sphinx]
upload-dir = build/sphinx/html
