[metadata]
name = ckanext-task2
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com//ckanext-task2
author = 
author_email = 
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             task2 = ckanext.task2.plugin:Task2Plugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/task2/i18n/ckanext-task2.pot
width = 80

[init_catalog]
domain = ckanext-task2
input_file = ckanext/task2/i18n/ckanext-task2.pot
output_dir = ckanext/task2/i18n

[update_catalog]
domain = ckanext-task2
input_file = ckanext/task2/i18n/ckanext-task2.pot
output_dir = ckanext/task2/i18n
previous = true

[compile_catalog]
domain = ckanext-task2
directory = ckanext/task2/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
