[metadata]
name = ckanext-user_login
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com//ckanext-user_login
author = 
author_email = 
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             user_login = ckanext.user_login.plugin:UserLoginPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/user_login/i18n/ckanext-user_login.pot
width = 80

[init_catalog]
domain = ckanext-user_login
input_file = ckanext/user_login/i18n/ckanext-user_login.pot
output_dir = ckanext/user_login/i18n

[update_catalog]
domain = ckanext-user_login
input_file = ckanext/user_login/i18n/ckanext-user_login.pot
output_dir = ckanext/user_login/i18n
previous = true

[compile_catalog]
domain = ckanext-user_login
directory = ckanext/user_login/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
