[project]
name = "{{ cookiecutter.project }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [
    {name = "{{ cookiecutter.author }}"
        {%- if cookiecutter.author_email -%}
        , email = "{{ cookiecutter.author_email }}"
        {%- endif -%}
    }
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
{% set keywords = cookiecutter.keywords.split() %}
keywords = [ {% for keyword in keywords %}"{{ keyword }}", {% endfor %}]
dependencies = []

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_user_name }}/{{ cookiecutter.project }}"

[project.entry-points."ckan.plugins"]
{{ cookiecutter.project_shortname }} = "ckanext.{{ cookiecutter.project_shortname }}.plugin:{{ cookiecutter.plugin_class_name }}"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
