[metadata]
name = {{ cookiecutter.project }}
version = 0.0.1
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_user_name }}/{{ cookiecutter.project }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = {{ cookiecutter.keywords }}

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             {{ cookiecutter.project_shortname }} = ckanext.{{ cookiecutter.project_shortname }}.plugin:{{ cookiecutter.plugin_class_name }}

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/{{ cookiecutter.project_shortname }}/i18n/ckanext-{{ cookiecutter.project_shortname }}.pot
width = 80

[init_catalog]
domain = ckanext-{{ cookiecutter.project_shortname }}
input_file = ckanext/{{ cookiecutter.project_shortname }}/i18n/ckanext-{{ cookiecutter.project_shortname }}.pot
output_dir = ckanext/{{ cookiecutter.project_shortname }}/i18n

[update_catalog]
domain = ckanext-{{ cookiecutter.project_shortname }}
input_file = ckanext/{{ cookiecutter.project_shortname }}/i18n/ckanext-{{ cookiecutter.project_shortname }}.pot
output_dir = ckanext/{{ cookiecutter.project_shortname }}/i18n
previous = true

[compile_catalog]
domain = ckanext-{{ cookiecutter.project_shortname }}
directory = ckanext/{{ cookiecutter.project_shortname }}/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
