# This file should only contain setuptools related configuration to build the
# extension (i.e. arguments to setup() in setup.py). Add any other project
# information should go to pyproject.toml instead.
#
# TODO: migrate Babel options to pyproject.toml when it's better supported


[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/{{ cookiecutter.project_shortname }}/i18n/ckanext-{{ cookiecutter.project_shortname }}.pot
width = 80

[init_catalog]
domain = ckanext-{{ cookiecutter.project_shortname }}
input_file = ckanext/{{ cookiecutter.project_shortname }}/i18n/ckanext-{{ cookiecutter.project_shortname }}.pot
output_dir = ckanext/{{ cookiecutter.project_shortname }}/i18n

[update_catalog]
domain = ckanext-{{ cookiecutter.project_shortname }}
input_file = ckanext/{{ cookiecutter.project_shortname }}/i18n/ckanext-{{ cookiecutter.project_shortname }}.pot
output_dir = ckanext/{{ cookiecutter.project_shortname }}/i18n
previous = true

[compile_catalog]
domain = ckanext-{{ cookiecutter.project_shortname }}
directory = ckanext/{{ cookiecutter.project_shortname }}/i18n
statistics = true
